# DIG-ResearchOS

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  AGENT_DEVELOPMENT_STRATEGY.md  BACKGROUND.md  CLAUDE.md  P0_BUG_FIXES_SUMMARY.md  README.md  README.zh-CN.md  RUNTIME_EVALUATION_REPORT.md  RUNTIME_FIXES_SUMMARY.md  T1_PI_AGENT_DEVELOPMENT_REPORT.md  T2_SCOUT_DEVELOPMENT_REPORT.md  T4_COMPATIBILITY_MATRIX.md  T4_IMPLEMENTATION_REPORT.md  T4_REFACTOR_INVENTORY.md  T4_SKILL_AUDIT_REPORT.md  TESTING_AND_DEBUGGING_REPORT.md  docker-compose.yml  environment.yml  pyproject.toml  requirements-dev.txt  requirements-llm.txt  requirements-optional-pdf.txt  requirements.txt
config/: README.md  agent_params.yaml  cdr_schema.yaml  gates.yaml  mcp.example.yaml  mcp.yaml  model_routing.multi_provider.example.yaml  model_routing.yaml  model_settings.example.yaml  runtime.yaml  state_machine.yaml  user_settings.yaml  venue_style_map.yaml
deploy/: .env.example  README.md  compose.yaml  researchos.ps1  researchos.sh
docs/: AGENT_CONFIGURATION_GUIDE.md  AGENT_DEVELOPMENT_GUIDE.md  DOCKER_USAGE.md  EEI_Artifact_Field_Contract.md  EEI_Artifact_Schema_Contract.md  EEI_Schema_version_strategy.md  EEI_codex_proposal_v01.md  EEI_codex_proposal_v02.md  EVALUATION_REPORT.md  Experiment_dev_overview.md  QUICKSTART.md  README.md  REAL_EVALUATION.md  ROBUSTNESS_ENHANCEMENT_PLAN.md  ROBUSTNESS_IMPLEMENTATION_SUMMARY.md  ResearchOS_external_executor_design.md  SEED_FILES_IMPROVEMENT.md  STYLE_AND_TERMINOLOGY_GUIDE.md  T1_PROMPT_FIX_20260422.md  T1_REAL_LLM_TEST_REPORT.md  T1_SEED_MANAGEMENT_IMPROVEMENTS.md  T1_T2_DEBUG_REPORT.md  (+38 more)
(+889 files in other folders)
