[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "researchos"
version = "0.1.0"
description = "ResearchOS runtime and orchestration foundation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4",
  "pydantic>=2.7,<3",
  "pyyaml>=6,<7",
  "structlog>=24.1,<26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
]
llm = [
  "litellm>=1.65,<2",
]

[project.scripts]
researchos = "researchos.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["researchos*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
